Client register page

--- a/Virtus/Virtus.csproj
+++ b/Virtus/Virtus.csproj
@@ -38,6 +38,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="PropertyChanged, Version=2.6.0.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
       <HintPath>..\packages\PropertyChanged.Fody.2.6.0\lib\net452\PropertyChanged.dll</HintPath>
     </Reference>
@@ -62,13 +63,28 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DataModels\ApplicationPage.cs" />
-    <Compile Include="UserControls\RegisterUserControl.xaml.cs">
+    <Compile Include="DataModels\Situation.cs" />
+    <Compile Include="DataModels\TypeOfPerson.cs" />
+    <Compile Include="MarkupExtensions\EnumBindingSourceExtension.cs" />
+    <Compile Include="Models\ClientModel.cs" />
+    <Compile Include="UserControls\Register\AddressUserControl.xaml.cs">
+      <DependentUpon>AddressUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Register\GeneralDataUserControl.xaml.cs">
+      <DependentUpon>GeneralDataUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Register\RegisterClientsUserControl.xaml.cs">
+      <DependentUpon>RegisterClientsUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Register\RegisterUserControl.xaml.cs">
       <DependentUpon>RegisterUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="ValueConverters\ApplicationPageValueConverter.cs" />
     <Compile Include="ValueConverters\BaseValueConverter.cs" />
+    <Compile Include="ValueConverters\EnumDescriptionTypeConverter.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\RegisterClientsViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -97,7 +113,19 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="UserControls\RegisterUserControl.xaml">
+    <Page Include="UserControls\Register\AddressUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Register\GeneralDataUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Register\RegisterClientsUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Register\RegisterUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -149,6 +177,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\DefaultUser2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
