--- a/Virtus/Virtus.csproj
+++ b/Virtus/Virtus.csproj
@@ -38,6 +38,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\x64\Release\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="PropertyChanged, Version=2.6.0.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
@@ -64,6 +72,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DataModels\ApplicationPage.cs" />
+    <Compile Include="DataModels\RegisterPage.cs" />
     <Compile Include="DataModels\Situation.cs" />
     <Compile Include="DataModels\TypeOfPerson.cs" />
     <Compile Include="MarkupExtensions\EnumBindingSourceExtension.cs" />
@@ -78,9 +87,13 @@
     <Compile Include="UserControls\Register\RegisterClientsUserControl.xaml.cs">
       <DependentUpon>RegisterClientsUserControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UserControls\Register\RegisterUserControl.xaml.cs">
+    <Compile Include="UserControls\RegisterUserControl.xaml.cs">
       <DependentUpon>RegisterUserControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\Register\RegisterSupplierUserControl.xaml.cs">
+      <DependentUpon>RegisterSupplierUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ValueConverters\RegisterPageValueConverter.cs" />
     <Compile Include="ValueConverters\ApplicationPageValueConverter.cs" />
     <Compile Include="ValueConverters\BaseValueConverter.cs" />
     <Compile Include="ValueConverters\EnumDescriptionTypeConverter.cs" />
@@ -103,6 +116,10 @@
     <Page Include="Styles\ComboBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\Datagrid.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Styles\Texts.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -132,7 +149,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="UserControls\Register\RegisterUserControl.xaml">
+    <Page Include="UserControls\RegisterUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Register\RegisterSupplierUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
