--- a/Virtus/Virtus.csproj
+++ b/Virtus/Virtus.csproj
@@ -78,17 +78,23 @@
     <Compile Include="MarkupExtensions\EnumBindingSourceExtension.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Client.cs" />
-    <Compile Include="UserControls\Register\AddressUserControl.xaml.cs">
+    <Compile Include="UserControls\Register\General\AddressUserControl.xaml.cs">
       <DependentUpon>AddressUserControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UserControls\Register\GeneralDataUserControl.xaml.cs">
+    <Compile Include="UserControls\Register\General\GeneralDataUserControl.xaml.cs">
       <DependentUpon>GeneralDataUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Register\RegisterCarrierUserControl.xaml.cs">
+      <DependentUpon>RegisterCarrierUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\Register\RegisterClientsUserControl.xaml.cs">
       <DependentUpon>RegisterClientsUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\RegisterUserControl.xaml.cs">
       <DependentUpon>RegisterUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Register\RegisterEmployeeUserControl.xaml.cs">
+      <DependentUpon>RegisterEmployeeUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\Register\RegisterSupplierUserControl.xaml.cs">
       <DependentUpon>RegisterSupplierUserControl.xaml</DependentUpon>
@@ -101,6 +107,7 @@
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\RegisterClientsViewModel.cs" />
     <Compile Include="ViewModels\RelayCommand.cs" />
+    <Compile Include="ViewModels\RelayParameterizedCommand.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -137,11 +144,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="UserControls\Register\AddressUserControl.xaml">
+    <Page Include="UserControls\Register\General\AddressUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="UserControls\Register\GeneralDataUserControl.xaml">
+    <Page Include="UserControls\Register\General\GeneralDataUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Register\RegisterCarrierUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -150,6 +161,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\RegisterUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Register\RegisterEmployeeUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -209,12 +224,12 @@
     <Resource Include="Resources\DefaultUser2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Fody.4.0.2\build\Fody.targets" Condition="Exists('..\packages\Fody.4.0.2\build\Fody.targets')" />
+  <Import Project="..\packages\Fody.3.3.2\build\Fody.targets" Condition="Exists('..\packages\Fody.3.3.2\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Fody.4.0.2\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.4.0.2\build\Fody.targets'))" />
+    <Error Condition="!Exists('..\packages\Fody.3.3.2\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.3.3.2\build\Fody.targets'))" />
     <Error Condition="!Exists('..\packages\PropertyChanged.Fody.2.6.0\build\PropertyChanged.Fody.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\PropertyChanged.Fody.2.6.0\build\PropertyChanged.Fody.props'))" />
   </Target>
 </Project>
