--- a/Virtus/Virtus.csproj
+++ b/Virtus/Virtus.csproj
@@ -78,6 +78,7 @@
     <Compile Include="MarkupExtensions\EnumBindingSourceExtension.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\SubMenuButton.cs" />
     <Compile Include="UserControls\BudgetUserControl.xaml.cs">
       <DependentUpon>BudgetUserControl.xaml</DependentUpon>
     </Compile>
@@ -119,6 +120,9 @@
     </Compile>
     <Compile Include="UserControls\ServicesUserControl.xaml.cs">
       <DependentUpon>ServicesUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\SubMenuUserControl.xaml.cs">
+      <DependentUpon>SubMenuUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\WorkOrderUserControl.xaml.cs">
       <DependentUpon>WorkOrderUserControl.xaml</DependentUpon>
@@ -224,6 +228,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\ServicesUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\SubMenuUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
