--- a/Virtus/Virtus.csproj
+++ b/Virtus/Virtus.csproj
@@ -72,6 +72,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DataModels\ApplicationPage.cs" />
+    <Compile Include="DataModels\ServicestPage.cs" />
     <Compile Include="DataModels\ProductPage.cs" />
     <Compile Include="DataModels\RegisterPage.cs" />
     <Compile Include="DataModels\Situation.cs" />
@@ -128,6 +129,9 @@
     <Compile Include="UserControls\ServicesUserControl.xaml.cs">
       <DependentUpon>ServicesUserControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\Services\AddNewServicesUserControl.xaml.cs">
+      <DependentUpon>AddNewServicesUserControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\SubMenuUserControl.xaml.cs">
       <DependentUpon>SubMenuUserControl.xaml</DependentUpon>
     </Compile>
@@ -136,6 +140,7 @@
     </Compile>
     <Compile Include="ValueConverters\CpfCnpjValueConverter.cs" />
     <Compile Include="ValueConverters\NamesValueConverter.cs" />
+    <Compile Include="ValueConverters\ServicesPageValueConverter.cs" />
     <Compile Include="ValueConverters\ProductPageValueConverter.cs" />
     <Compile Include="ValueConverters\RegisterPageValueConverter.cs" />
     <Compile Include="ValueConverters\ApplicationPageValueConverter.cs" />
@@ -148,6 +153,7 @@
     <Compile Include="ViewModels\Register\RegisterViewModel.cs" />
     <Compile Include="ViewModels\RelayCommand.cs" />
     <Compile Include="ViewModels\RelayParameterizedCommand.cs" />
+    <Compile Include="ViewModels\Services\ServicesViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -248,6 +254,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UserControls\Services\AddNewServicesUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UserControls\SubMenuUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -309,7 +319,6 @@
     <Folder Include="UserControls\Inventory\" />
     <Folder Include="UserControls\Reports\" />
     <Folder Include="UserControls\Sales\" />
-    <Folder Include="UserControls\Services\" />
     <Folder Include="UserControls\WorkOrder\" />
   </ItemGroup>
   <ItemGroup>
