--- a/Virtus/Virtus.csproj
+++ b/Virtus/Virtus.csproj
@@ -72,6 +72,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DataModels\ApplicationPages.cs" />
+    <Compile Include="DataModels\SalesPages.cs" />
     <Compile Include="DataModels\WorkOrderPages.cs" />
     <Compile Include="DataModels\BudgetPages.cs" />
     <Compile Include="DataModels\ProductPages.cs" />
@@ -134,6 +135,18 @@
     <Compile Include="UserControls\SalesUserControl.xaml.cs">
       <DependentUpon>SalesUserControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\Sales\CounterSalesUserControl.xaml.cs">
+      <DependentUpon>CounterSalesUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Sales\ProductsSalesUserControl.xaml.cs">
+      <DependentUpon>ProductsSalesUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Sales\ReturnedSalesUserControl.xaml.cs">
+      <DependentUpon>ReturnedSalesUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Sales\ServicesSalesUserControl.xaml.cs">
+      <DependentUpon>ServicesSalesUserControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\ServicesUserControl.xaml.cs">
       <DependentUpon>ServicesUserControl.xaml</DependentUpon>
     </Compile>
@@ -149,6 +162,7 @@
     <Compile Include="UserControls\WorkOrder\AddWorkOrderUserControl.xaml.cs">
       <DependentUpon>AddWorkOrderUserControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ValueConverters\SalesPageValueConverter.cs" />
     <Compile Include="ValueConverters\WorkOrderPageValueConverter.cs" />
     <Compile Include="ValueConverters\CpfCnpjValueConverter.cs" />
     <Compile Include="ValueConverters\NamesValueConverter.cs" />
@@ -167,6 +181,7 @@
     <Compile Include="ViewModels\Register\RegisterViewModel.cs" />
     <Compile Include="ViewModels\RelayCommand.cs" />
     <Compile Include="ViewModels\RelayParameterizedCommand.cs" />
+    <Compile Include="ViewModels\Sales\SalesViewModel.cs" />
     <Compile Include="ViewModels\Services\ServicesViewModel.cs" />
     <Compile Include="ViewModels\WorkOrder\WorkOrderViewModel.cs" />
     <Page Include="MainWindow.xaml">
@@ -273,6 +288,22 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UserControls\Sales\CounterSalesUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Sales\ProductsSalesUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Sales\ReturnedSalesUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Sales\ServicesSalesUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UserControls\ServicesUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -344,7 +375,6 @@
     <Folder Include="UserControls\Finance\" />
     <Folder Include="UserControls\Inventory\" />
     <Folder Include="UserControls\Reports\" />
-    <Folder Include="UserControls\Sales\" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\DefaultUser2.png" />
